# Flip

./: .claudiaideconfig  .gitignore  CMakeLists.txt  License  Readme.md
src/: Flip.cpp  Flip.h  Interface.cpp  Interface.h  Secret.cpp  audioPlayer.cpp  audioPlayer.h  input.cpp  input.h  renderer.cpp  renderer.h
